<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo" >

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_Usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_hay_id" />

            <ImageView
                android:id="@+id/imageView_pelicula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Foto"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hacer_foto" />

                <Button
                    android:id="@+id/Galeria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/galeria" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTituloPelicula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/titulo"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editDuracion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/duracion_minutos"
                android:inputType="number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editPuntuacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/puntuacion"
                android:inputType="number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/genero"
                android:inputType="text"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/button_crearpelicula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Guardar" />

            <Button
                android:id="@+id/button_cancelar_peli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelar" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>