<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <ScrollView
        android:id="@+id/scrollear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/idUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="176dp"
                android:text="@string/no_hay_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView_plataforma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="129dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/scrollear"
                tools:layout_editor_absoluteX="47dp">

                <Button
                    android:id="@+id/button_camara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hacer_foto"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_plataforma" />

                <Button
                    android:id="@+id/button_galeria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/subir_foto"
                    app:layout_constraintStart_toEndOf="@+id/button_camara"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_plataforma" />
            </LinearLayout>

            <EditText
                android:id="@+id/editText_nombreplataforma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="12dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/nombre_plataforma"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.079"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editText_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="12dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/url"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.079"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/editText_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="12dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/usuario_correo"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.079"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTextTextPasswordAcceso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="12dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/contase_a"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.079"
                app:layout_constraintStart_toStartOf="parent"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_guardar_plataforma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Guardar" />

            <Button
                android:id="@+id/button_cancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>